实现上传文件到七牛。

--- a/examples/index.html
+++ b/examples/index.html
@@ -4,11 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Test</title>
-  <script src="../src/assets/CryptpJS.js"></script>
-  <script src="../src/image2qiniu.js"></script>
   <script src="../ueditor/ueditor.config.js"></script>
   <script src="../ueditor/ueditor.all.js"></script>
   <script src="../ueditor/lang/zh-cn/zh-cn.js"></script>
+  <script src="../dist/qiniuUpload.js"></script>
 </head>
 
 <body>
